<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/tvFeedback" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRating" />
	</LinearLayout>
	
    <RatingBar
	    android:id="@+id/rbRating"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		        android:text="@string/tvComments" />
	</LinearLayout>

    <EditText
        android:id="@+id/etComments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="selfDestruct"
	        android:text="@string/btnCancelText" />
        
	    <Button
	        android:id="@+id/btnSubmit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="selfDestruct"
	        android:text="@string/btnSubmitText" />

	</LinearLayout>

</LinearLayout>