<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btnFeedback"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnFeedback" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <Button
	        android:id="@+id/btnGenerate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnGenerateText" />
	    <TextView
	        android:id="@+id/textview_randomname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

	    <Button
	        android:id="@+id/btnCat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnCatText" />

	</LinearLayout>
    
</LinearLayout>